// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badges should render custom package badge and source code badge when both url and repository url is specified 1`] = `
<div
  className="badge-container"
>
  <a
    className="badge"
    href="https://engineering.cerner.com/terra-dev-site"
  >
    <span
      className="badge-name"
    >
      package
    </span>
    <span
      className="badge-version"
    >
      v2.13.0
    </span>
  </a>
  <a
    className="badge"
    href="https://github.com/cerner/terra-dev-site"
  >
    <span
      className="badge-name"
    >
      github
    </span>
    <span
      className="badge-version"
    >
      source
    </span>
  </a>
</div>
`;

exports[`Badges should render npm badge and source code badge when url is not specified and repository url is specified 1`] = `
<div
  className="badge-container"
>
  <a
    className="badge"
    href="https://www.npmjs.org/package/terra-dev-site/v/2.13.0"
  >
    <span
      className="badge-name"
    >
      npm
    </span>
    <span
      className="badge-version"
    >
      v2.13.0
    </span>
  </a>
  <a
    className="badge"
    href="https://github.com/cerner/terra-dev-site"
  >
    <span
      className="badge-name"
    >
      github
    </span>
    <span
      className="badge-version"
    >
      source
    </span>
  </a>
</div>
`;

exports[`Badges should render only custom package badge when url and version props are set 1`] = `
<div
  className="badge-container"
>
  <a
    className="badge"
    href="https://engineering.cerner.com/terra-dev-site"
  >
    <span
      className="badge-name"
    >
      package
    </span>
    <span
      className="badge-version"
    >
      v2.13.0
    </span>
  </a>
</div>
`;

exports[`Badges should render only npm badge when url is not specified 1`] = `
<div
  className="badge-container"
>
  <a
    className="badge"
    href="https://www.npmjs.org/package/terra-dev-site/v/2.13.0"
  >
    <span
      className="badge-name"
    >
      npm
    </span>
    <span
      className="badge-version"
    >
      v2.13.0
    </span>
  </a>
</div>
`;
